--- a/lang/de.json
+++ b/lang/de.json
@@ -1,31 +1,35 @@
 {
     "homeData": {
-      "title": "Willkommen auf unserer Website",
-      "titleDescription": "Entdecken Sie unsere erstaunlichen Dienstleistungen und Projekte.",
-      "mainButtonText": "Erfahren Sie mehr"
+      "title": "Willkommen bei Arascor Vision",
+      "titleDescription": "Steigerung des Geschäftmarketings durch virtuelle Touren. Wir spezialisieren uns auf die Erstellung immersiver virtueller Erlebnisse und innovativer Marketinglösungen für Unternehmen.",
+      "mainButtonText": "Treffen Sie Uns!"
     },
     "homeCardsMain": [
       {
-        "text": "Unsere Dienstleistungen",
-        "image": "/images/service.jpg",
-        "linkTo": "/services"
+        "text": "Dienstleistungen"
       },
       {
-        "text": "Unsere Projekte",
-        "image": "/images/projects.jpg",
-        "linkTo": "/projects"
+        "text": "Projekte"
+      },
+      {
+        "text": "Soziales"
+      },
+      {
+        "text": "Kontaktieren Sie uns"
       }
     ],
     "homeCard": [
       {
-        "title": "Professionelle Dienstleistungen",
-        "desc": "Wir bieten erstklassige Dienstleistungen für unsere Kunden.",
-        "image": "/images/service1.jpg"
+        "title": "Expertise in VT Virtual-Tours",
+        "desc": "Unser Team erstellt immersive und interaktive virtuelle Touren, die das Publikum fesseln und Ihr Unternehmen im besten Licht präsentieren. Perfekt für Branchen wie Immobilien, Gastgewerbe und Bildung, helfen unsere Touren Ihnen, sich abzuheben und potenzielle Kunden zu begeistern."
       },
       {
-        "title": "Innovative Projekte",
-        "desc": "Unsere Projekte sind innovativ und zukunftsorientiert.",
-        "image": "/images/project1.jpg"
+        "title": "Umfassende Marketingstrategien",
+        "desc": "Wir entwickeln maßgeschneiderte Marketingstrategien, die auf Ihre Geschäftsziele abgestimmt sind. Von digitalen Marketingkampagnen bis hin zur Markenentwicklung sorgt unser ganzheitlicher Ansatz dafür, dass Ihre Marketingbemühungen kohärent und effektiv sind, was Wachstum und Markenbekanntheit fördert."
+      },
+      {
+        "title": "Hochwertige Inhaltserstellung",
+        "desc": "Unser erfahrenes Team aus Schriftstellern, Designern und Videografen erstellt überzeugende Inhalte, die bei Ihrer Zielgruppe Anklang finden. Wir erstellen ansprechende Materialien, die die Geschichte Ihrer Marke erzählen und Ihre Online-Präsenz verbessern, sodass Sie eine tiefere Verbindung zu Kunden aufbauen können."
       }
     ]
   }
